--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-const MONGO_URL = mongodb+srv://kwartoAdmin:kwartoAdmin123@kwartoserver.sydq4fw.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://kwartoAdmin:kwartoAdmin123@kwartoserver.sydq4fw.mongodb.net/?retryWrites=true&w=majorityconst
+SECRET = ABC
+
